--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "license-list-data"]
-	path = license-list-data
+	path = plugins/license-gather-plugin/license-list-data
 	url = https://github.com/spdx/license-list-data.git
