ide-plugin: support generatedSources in Eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 /build/
 /buildSrc/build/
 /buildSrc/subprojects/*/build/**
+/buildSrc/subprojects/*/bin/**
 /buildSrc/subprojects/*/out/**
 /plugins/build/
 /plugins/*/build/
+/plugins/bin/
 /plugins/out/
+/plugins/*/bin/
 /plugins/*/out/
 
 # Ignore Gradle project-specific cache directory
@@ -22,6 +25,11 @@
 /out/
 .idea/
 *.iml
+
+# Eclipse
+.project
+.settings
+.classpath
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 /hs_err_pid*
