--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@
 #   limitations under the License.
 org.gradle.parallel=true
 kotlin.parallel.tasks.in.project=true
-project.version=1.17.0
+project.version=1.18.0
+checksum.violation.log.level=lifecycle
