--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,8 @@ matrix:
         # https://youtrack.jetbrains.com/issue/KT-31710 Dokka javadoc task fails with JDK 11 reporting missing HtmlDoclet
         - ./gradlew validateTaskProperties build -x dokka
         - openssl dgst -sha512 plugins/*/build/libs/*.jar
+    - name: Compatibility - Caffeine
+      jdk: openjdk8
+      script:
+        - .travis/prepare_e2e.sh https://github.com/ben-manes/caffeine.git
+        - cd e2e && ./gradlew allDependencies build -x test -x compileJava -x compileTestJava -x compileJmhJava -x javadoc
