--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ matrix:
         # https://youtrack.jetbrains.com/issue/KT-31710 Dokka javadoc task fails with JDK 11 reporting missing HtmlDoclet
         - ./gradlew validateTaskProperties build -x dokka
         - openssl dgst -sha512 plugins/*/build/libs/*.jar
+    - name: Tests with OpenJDK 13
+      jdk: openjdk13
+      script:
+        # https://youtrack.jetbrains.com/issue/KT-31710 Dokka javadoc task fails with JDK 11 reporting missing HtmlDoclet
+        - ./gradlew validateTaskProperties build -x dokka
+        - openssl dgst -sha512 plugins/*/build/libs/*.jar
     - name: Compatibility - Caffeine
       jdk: openjdk8
       script:
