--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -107,3 +107,35 @@ jobs:
       run: |
         ORG_GRADLE_PROJECT_checksumIgnore=true ./gradlew --no-parallel --no-daemon publishDist -Prc=1 -PlocalReleasePlugins -PasfTestNexusUsername=test -PasfTestNexusPassword=test -PasfTestGitSourceUsername=test -PasfTestGitSourcePassword=test -PasfTestSvnUsername=test -PasfTestSvnPassword=test
 
+  release-autostyle:
+    name: 'Release Autostyle'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 50
+        submodules: true
+    - name: 'Set up JDK 8'
+      uses: actions/setup-java@v1
+      with:
+        java-version: 8
+    - name: 'Start release environment'
+      run: |
+        gpg --import .github/workflows/test-key.asc
+        git clone --depth 100 https://github.com/vlsi/asflike-release-environment.git ../asflike-release-environment
+        cd ../asflike-release-environment
+        cp .env_autostyle .env
+        docker-compose build vcs
+        docker-compose up -d
+    - name: 'Clone Autostyle'
+      run: |
+        git clone --depth 100 https://github.com/autostyle/autostyle.git ../autostyle
+    - name: 'Prepare Candidate'
+      working-directory: ../autostyle
+      run: |
+        ORG_GRADLE_PROJECT_checksumIgnore=true ./gradlew --no-parallel --no-daemon prepareVote -Prc=1 -PlocalReleasePlugins -PghTestNexusUsername=test -PghTestNexusPassword=test -PghTestGitSourceUsername=test -PghTestGitSourcePassword=test -Psigning.gnupg.keyName=289023DE2663BD17 -PuseGpgCmd -Psigning.gnupg.useLegacyGpg=true
+    - name: 'Publish Release'
+      working-directory: ../autostyle
+      run: |
+        ORG_GRADLE_PROJECT_checksumIgnore=true ./gradlew --no-parallel --no-daemon publishDist -Prc=1 -PlocalReleasePlugins -PghTestNexusUsername=test -PghTestNexusPassword=test -PghTestGitSourceUsername=test -PghTestGitSourcePassword=test
+
