Fix typo in stage-vote-release-plugin description

--- a/plugins/stage-vote-release-plugin/gradle.properties
+++ b/plugins/stage-vote-release-plugin/gradle.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 #
-description=Allows to stage the artifacts and vote on them befor the release
+description=Allows to stage the artifacts and vote on them before the release
 plugin.display.name=Stage vote release Gradle plugin
 plugin.implementation.class=com.github.vlsi.gradle.release.StageVoteReleasePlugin
 plugin.tags=license,verification
