Move Gradle plugin version to properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@
 org.gradle.parallel=true
 kotlin.parallel.tasks.in.project=true
 project.version=1.53
+
+# Plugins
+com.github.autostyle.version=3.0
+com.gradle.plugin-publish.version=0.10.1
+org.jetbrains.gradle.plugin.idea-ext.version=0.5
+com.github.ben-manes.versions.version=0.21.0
+org.jetbrains.dokka.version=0.9.17
