--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -17,3 +17,6 @@
 org.gradle.parallel=true
 kotlin.parallel.tasks.in.project=true
 checksum.violation.log.level=lifecycle
+
+# Plugins
+com.github.autostyle.version=3.0
