gradle-extensions-plugin: significantly improve stacktrace formatting, add task failure summary

--- a/plugins/gradle-extensions-plugin/gradle.properties
+++ b/plugins/gradle-extensions-plugin/gradle.properties
@@ -16,5 +16,5 @@
 #
 description=Provides extra Kotlin DSL for Gradle scripts
 plugin.display.name=Gradle Kotlin Extensions
-plugin.implementation.class=com.github.vlsi.gradle.properties.ProjectExtensionsPlugin
+plugin.implementation.class=com.github.vlsi.gradle.ProjectExtensionsPlugin
 plugin.tags=gradle,kotlin,dsl
