--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 org.gradle.parallel=true
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
+
 # See https://github.com/gradle/gradle/pull/11358 , https://issues.apache.org/jira/browse/INFRA-14923
 # repository.apache.org does not yet support .sha256 and .sha512 checksums
 systemProp.org.gradle.internal.publish.checksums.insecure=true
