Remove "gradle" plugin tag

--- a/plugins/gettext-plugin/gradle.properties
+++ b/plugins/gettext-plugin/gradle.properties
@@ -17,4 +17,4 @@
 description=Configures gettext processing for Gradle
 plugin.display.name=GNU gettext plugin for Gradle
 plugin.implementation.class=com.github.vlsi.gradle.gettext.GettextPlugin
-plugin.tags=gradle,gettext,dsl
+plugin.tags=gettext,dsl
