--- a/plugins/gradle-extensions-plugin/gradle.properties
+++ b/plugins/gradle-extensions-plugin/gradle.properties
@@ -17,4 +17,4 @@
 description=Provides extra Kotlin DSL for Gradle scripts
 plugin.display.name=Gradle Kotlin Extensions
 plugin.implementation.class=com.github.vlsi.gradle.ProjectExtensionsPlugin
-plugin.tags=gradle,kotlin,dsl
+plugin.tags=kotlin,dsl
