Test Calcite with Gradle wrapper version only
Calcite Avatica is known to be incompatible with recent Gradle.

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gradle-version: [wrapper, rc, nightly]
+        gradle-version: [wrapper]
     name: 'Calcite Avatica ${{ matrix.gradle-version }}'
     runs-on: ubuntu-latest
     steps:
@@ -63,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gradle-version: [wrapper, rc, nightly]
+        gradle-version: [wrapper]
     name: 'Calcite ${{ matrix.gradle-version }}'
     runs-on: ubuntu-latest
     steps:
