--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK ${{ matrix.java-version }}'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: ${{ matrix.java-version }}
+        distribution: 'zulu'
     - name: 'Test'
       uses: burrunan/gradle-cache-action@v1
       with:
