--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -27,9 +27,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK 11'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: 11
+        distribution: 'zulu'
     - name: 'Start release environment'
       run: |
         gpg --import .github/workflows/test-key.asc
@@ -72,9 +73,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK 11'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: 11
+        distribution: 'zulu'
     - name: 'Start release environment'
       run: |
         gpg --import .github/workflows/test-key.asc
@@ -117,9 +119,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK 11'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: 11
+        distribution: 'zulu'
     - name: 'Start release environment'
       run: |
         gpg --import .github/workflows/test-key.asc
@@ -162,9 +165,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK 8'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: 8
+        distribution: 'zulu'
     - name: 'Start release environment'
       run: |
         gpg --import .github/workflows/test-key.asc
@@ -207,9 +211,10 @@ jobs:
         fetch-depth: 50
         submodules: true
     - name: 'Set up JDK 8'
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
         java-version: 8
+        distribution: 'zulu'
     - name: 'Start release environment'
       run: |
         gpg --import .github/workflows/test-key.asc
