--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,18 @@
     {
       "matchPackagePrefixes": ["com.github.vlsi"],
       "groupName": "com.github.vlsi"
+    },
+    {
+      "matchPackagePrefixes": ["org.ajoberstar.grgit"],
+      "groupName": "org.ajoberstar.grgit",
+      "description": "TODO: grgit 5.0 requires Java 11",
+      "allowedVersions": "< 5.0"
+    },
+    {
+      "matchPackagePrefixes": ["org.eclipse.jgit"],
+      "groupName": "org.eclipse.jgit",
+      "description": "TODO: jgit 6.0 requires Java 11",
+      "allowedVersions": "< 6.0"
     }
   ]
 }
